<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateAccountActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siglas_app"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="173dp"
        android:layout_height="170dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginBottom="8dp"
            android:text="@string/nombres"
            android:textSize="16sp"

            tools:layout_editor_absoluteY="163dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNombres"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:hint="@string/hint_nombres"

            android:maxLines="1"

            android:singleLine="true" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:text="@string/apellidos"
            android:textSize="16sp"

            tools:layout_editor_absoluteY="163dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etApellidos"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:hint="@string/hint_apellidos"

            android:maxLines="1"

            android:singleLine="true" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:text="@string/ciudad"
            android:textSize="16sp"

            tools:layout_editor_absoluteY="163dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCiudad"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"

            android:hint="@string/hint_ciudad"

            android:maxLines="1"

            android:singleLine="true" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textSize="16sp"

            tools:layout_editor_absoluteY="163dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/hint_password"

            android:inputType="textPassword"
            android:maxLines="1"

            android:singleLine="true" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistar"

        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="#989898"

        android:text="@string/registrar_informacion"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:backgroundTint="#F16850"
        android:src="@android:drawable/ic_menu_revert"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>